# ESDC2014

./: .gitignore  ESDC.cpp  Makefile.am
helloworld/intel/: COPYING  INSTALL  Makefile  Makefile.in  config.status  configure  depcomp  hello.c  install-sh  missing
helloworld/intel/.deps/: hello.Po
helloworld/intel/autom4te.cache/: output.0  requests  traces.0  traces.1
helloworld/pc/: .gitignore  Makefile  SkinDetector  SkinDetector.cpp  concat_img  face_detect  face_detect.cpp  facerec_eigenface  hello_objectdetect  hello_objectdetect.cpp  highgui  object_detect.cpp  pedestrain.cpp  sub_image.cpp  test_SkinDetector.cpp  videocapture.cpp
setup/: Eclipse
source/: ESDC.cpp  Makefile  Makefile.am  connect.sh  t.c
source/android-socket-client-master/sdk_chat_demo/: .classpath  AndroidManifest.xml  project.properties
source/camera/: camera.cpp  camera.h
source/car/: NOTE.md
source/car/10008/: Thumbs.db
source/car/MotorWheel/: Omni4WD.cpp  Omni4WD.h
source/intel_board/: .gitignore  Makefile  README.md  intel_board.cpp  intel_board.h  macro.h  main.cpp  main.h
source/intel_board/workspace/helloworld_by_eclipse/: .autotools  .cproject  .project  INSTALL  Makefile  Makefile.in  README  aclocal.m4  config.guess  config.h  config.status  config.sub  configure  configure.ac  depcomp  install-sh  ltmain.sh  missing  x86_64-poky-linux-libtool
source/intel_board/workspace/helloworld_by_eclipse/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
source/intel_board/workspace/helloworld_by_eclipse/src/: Makefile  Makefile.am  Makefile.in  helloworld_by_eclipse  helloworld_by_eclipse.cpp
source/intel_board/workspace/helloworld_by_eclipse/src/.deps/: helloworld_by_eclipse.Po
source/motion/: README.md
source/motion_platform/: README.md
(+111 files in other folders)
